# story-ai-visibility

./: .env.example  AGENTS.md  Dockerfile  README.md  pyproject.toml  requirements.txt
assets/visibility/: extract_pillars.prompt.md  generate_questions.prompt.md  system.prompt.md
docs/: PRD.md  PRD_FE.md  PRD_v2.md
docs/samples/: bluej.md
docs/schema/: visibility_result.json
pytest/: __init__.py
src/: cli.py  pipeline.py
src/agents/visibility/: evaluator.py  ingestion.py  model_runner.py  pillars.py  prompt_assembler.py  questions.py  service.py  storage.py
src/api/: main.py
src/common/: config.py  openai_client.py  text.py  types.py
tests/: test_cli.py
tests/agents/visibility/: test_evaluator.py  test_ingestion.py  test_model_runner.py  test_pillars.py  test_questions.py  test_service.py  test_storage.py
tests/api/: test_api.py
tests/fixtures/: bluej_masked.txt  bluej_raw.txt
