[tool.poetry]
name = "story-ai-visibility"
version = "0.1.0"
description = "Story AI visibility agents and tooling."
authors = ["Jessie Han <jessie@example.com>"]
packages = [{ include = "src" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
black = "^23.12"
ruff = "^0.4.0"

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.ruff]
target-version = "py311"
line-length = 100

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
